# groundwork-spreadsheets

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  doc-requirements.txt  pyproject.toml  setup.py  setup.py.old  test-requirements.txt  tox.ini
docs/: conf.py  index.rst
docs/contents/: changelog.rst  configuration.rst  usage.rst
example/: config.json  configuration.py  example.py  example.xlsx  readme.txt
groundwork_spreadsheets/: __init__.py  version.py
groundwork_spreadsheets/patterns/ExcelColumnsReader/: excel_columns_reader.py  excel_config.json  excel_config_schema.json  test.xlsx
groundwork_spreadsheets/patterns/ExcelValidationPattern/: excel_validation_pattern.py
tests/: configuration.py  conftest.py  test_ExcelValidationPattern.py  test_ExcelValidationPattern_sheet_config.py  test_ExcelValidationPattern_workbook.py  test_headers_data_matrix_config.py  test_sheet_config.py
tests/data_types/: test_data_types.py
tests/data_types/test_data/: config.json  data_types_excel_2013.xlsm  data_types_excel_2013.xlsx
tests/filtering/: test_filtering.py
tests/filtering/test_data/: column_based.json  column_based.xlsx  excluded_enable_logging.json  excluded_fail_on_empty_cell.json  excluded_fail_on_empty_cell.xlsx  excluded_fail_on_type_error.json  excluded_fail_on_type_error.xlsx  excluded_logging.xlsx  row_based.json  row_based.xlsx
tests/matrix/: test_matrix.py
tests/matrix/test_data/: column_based.xlsx  column_based_position_mix_1.xlsx  column_based_position_mix_2.xlsx  column_based_position_mix_3.xlsx  column_based_position_mix_4.xlsx  config_column_based_errors_1.json  config_column_based_errors_2.json  config_column_based_errors_3.json  config_column_based_errors_4.json  config_column_based_position_mix.json  config_row_based_position_mix.json  row_based.xlsx  row_based_position_mix_1.xlsx  row_based_position_mix_2.xlsx  (+2 more)
tests/sheet/: test_sheet.py
tests/test_data/: config_matrix_errors_1.json  config_matrix_errors_2.json  config_matrix_errors_3.json  config_matrix_errors_4.json  config_sheet_byIndex.json  config_sheet_byIndex_out_of_range.json  config_sheet_byName.json  config_sheet_byName_not_exist.json  config_sheet_first.json  config_sheet_index.json  config_sheet_index_out_of_range.json  config_sheet_last.json  config_sheet_name.json  config_sheet_name_not_exist.json  config_sheet_unknown_search_type.json  test.xlsx
tests/workbook/: test_workbook.py
(+9 files in other folders)
